<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.byodmidtermapp.NameForm"
    tools:showIn="@layout/activity_name_form"
    android:background="@drawable/android1">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/studentNameEditText"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:hint="@string/studentName"
        android:textColorHint="@color/LimeGreen"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/studentNumberEditText"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:hint="@string/studentNumber"
        android:textColorHint="@color/LimeGreen"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/studentNameEditText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/submitAnswers"
        android:id="@+id/submitAnswersButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@drawable/button_shape8" />
</RelativeLayout>
